<resources>
    <string name="app_name">TrainCom</string>
    <string name="login_title">LOGIN</string>
    <string name="enter_uname">Enter NIC</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_repassword">Re-enter Password</string>
    <string name="enter_search_date">Date</string>
    <string name="enter_search_departure">Departure Station</string>
    <string name="enter_search_arrival">Arrival Station</string>
    <string name="enter_number_of_pax">No.of passengers</string>
    <string name="register_title">REGISTER</string>
    <string name="title_activity_schedules">SchedulesActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My Bookings</string>
    <string name="title_notifications">Profile</string>
    <string name="search">SEARCH</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="profile_name">Name</string>
    <string name="profile_nic">NIC</string>
    <string name="profile_email">Email Address</string>
    <string name="profile_phone">Phone Number</string>
    <string name="profile_password">Password</string>
    <string name="profile_deactivate">DEACTIVATE ME</string>
    <string name="logout">LOGOUT</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="confirm">CONFIRM</string>
    <string name="create_new">MAKE RESERVATION</string>
    <string name="reserve">RESERVE</string>
    <string name="confirm_booking">CONFIRM BOOKING</string>
    <string name="train_name">Train Name</string>
    <string name="start_station">Departure Station</string>
    <string name="end_station">Arrival Station</string>
    <string name="confirm_pax">No.of Persons</string>
    <string name="edit_txt">EDIT</string>
    <string name="delete_txt">DELETE</string>
    <string name="edit_booking">EDIT BOOKING</string>
    <string name="date">Date</string>
    <string name="no_data">OOPS! YOU DONT HAVE ANY DATA</string>
</resources>