<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <DatePicker
        android:id="@+id/createDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/dark_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="239dp"
        android:layout_marginTop="19dp"
        android:background="@color/teal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createDatePicker">

        <EditText
            android:id="@+id/startStation"
            android:layout_width="166dp"
            android:layout_height="51dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/enter_search_departure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/endStation"
            app:layout_constraintHorizontal_bias="0.617"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.138" />

        <EditText
            android:id="@+id/endStation"
            android:layout_width="168dp"
            android:layout_height="50dp"
            android:layout_marginEnd="28dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/enter_search_arrival"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.142" />

        <EditText
            android:id="@+id/createPax"
            android:layout_width="161dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/enter_number_of_pax"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startStation"
            app:layout_constraintVertical_bias="0.157" />

        <Button
            android:id="@+id/filterBtn"
            android:layout_width="162dp"
            android:layout_height="53dp"
            android:text="@string/search"
            android:background="@drawable/purple_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.886"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createPax"
            app:layout_constraintVertical_bias="0.302" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>