<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="315dp"
        android:layout_height="514dp"
        android:background="@drawable/profile_card"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="161dp"
            android:layout_height="43dp"
            android:text="@string/confirm_booking"
            android:gravity="center"
            android:textColor="@color/teal"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.074" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="100dp"
            android:layout_height="24dp"
            android:layout_marginTop="56dp"
            android:text="@string/train_name"
            app:layout_constraintEnd_toStartOf="@+id/trainNameConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/trainNameConfirm"
            android:layout_width="116dp"
            android:layout_height="25dp"
            android:layout_marginTop="56dp"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            android:layout_marginEnd="40dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="118dp"
            android:layout_height="29dp"
            android:layout_marginTop="24dp"
            android:text="@string/start_station"
            app:layout_constraintEnd_toStartOf="@+id/startStationEdit"
            app:layout_constraintHorizontal_bias="0.707"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/startStationEdit"
            android:layout_width="116dp"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:text="TextView"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="100dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/end_station"
            app:layout_constraintEnd_toStartOf="@+id/endStationEdit"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/endStationEdit"
            android:layout_width="116dp"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:text="TextView"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="100dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/confirm_pax"
            app:layout_constraintEnd_toStartOf="@+id/paxEdit"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/paxEdit"
            android:layout_width="116dp"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:text="TextView"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <Button
            android:id="@+id/EditPageBtn"
            android:layout_width="244dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/teal"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paxEdit"
            app:layout_constraintVertical_bias="0.714" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="109dp"
        android:layout_height="126dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>