<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="183dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/my_profile"
        android:textColor="@color/teal"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="341dp"
        android:layout_height="362dp"
        android:background="@drawable/profile_card"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.169">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="126dp"
            android:layout_height="29dp"
            android:text="@string/profile_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.093" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="155dp"
            android:layout_height="31dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.302"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.093" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="126dp"
            android:layout_height="29dp"
            android:text="@string/profile_nic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.076" />

        <TextView
            android:id="@+id/profileNic"
            android:layout_width="155dp"
            android:layout_height="31dp"
            android:layout_marginTop="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.314"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/profileName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="126dp"
            android:layout_height="29dp"
            android:text="@string/profile_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintVertical_bias="0.084" />

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="155dp"
            android:layout_height="31dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.302"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/profileNic"
            app:layout_constraintVertical_bias="0.042" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="126dp"
            android:layout_height="29dp"
            android:text="@string/profile_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.125" />

        <TextView
            android:id="@+id/profilePhone"
            android:layout_width="155dp"
            android:layout_height="31dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.314"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/profileEmail"
            app:layout_constraintVertical_bias="0.121" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="126dp"
            android:layout_height="29dp"
            android:text="@string/profile_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintVertical_bias="0.16" />

        <TextView
            android:id="@+id/profilePassword"
            android:layout_width="155dp"
            android:layout_height="31dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.314"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/profilePhone"
            app:layout_constraintVertical_bias="0.139" />

        <Button
            android:id="@+id/deactivateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_deactivate"
            android:padding="10dp"
            android:textColor="@color/white"
            android:background="@drawable/purple_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="334dp"
        android:layout_height="56dp"
        android:text="@string/logout"
        android:backgroundTint="@color/teal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <ImageButton
        android:id="@+id/editProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_btn_bg"
        android:padding="15dp"
        android:src="@drawable/edit_profile"
        android:elevation="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.067" />

    <!--    <ProgressBar-->
<!--        android:id="@+id/progressBar"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="109dp"-->
<!--        android:layout_height="126dp"-->
<!--        android:elevation="50dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>