<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="244dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/title_edit_profile"
        android:textColor="@color/teal"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="336dp"
        android:layout_height="547dp"
        android:background="@drawable/profile_card"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.539">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="115dp"
            android:layout_height="29dp"
            android:text="@string/profile_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.093" />

        <EditText
            android:id="@+id/profileName"
            android:layout_width="165dp"
            android:layout_height="35dp"
            android:background="@drawable/profile_card"
            android:paddingHorizontal="5dp"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.093" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="115dp"
            android:layout_height="29dp"
            android:text="@string/profile_nic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.095" />

        <TextView
            android:id="@+id/profileNic"
            android:layout_width="165dp"
            android:layout_height="35dp"
            android:layout_marginTop="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/profileName"
            app:layout_constraintVertical_bias="0.046" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="115dp"
            android:layout_height="29dp"
            android:text="@string/profile_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintVertical_bias="0.113" />

        <EditText
            android:id="@+id/profileEmail"
            android:layout_width="165dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/profile_card"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/profileNic"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="115dp"
            android:layout_height="29dp"
            android:text="@string/profile_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.133" />

        <EditText
            android:id="@+id/profilePhone"
            android:layout_width="165dp"
            android:layout_height="35dp"
            android:background="@drawable/profile_card"
            android:inputType="number"
            android:paddingHorizontal="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/profileEmail"
            app:layout_constraintVertical_bias="0.118" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="115dp"
            android:layout_height="29dp"
            android:text="@string/profile_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintVertical_bias="0.191" />

        <EditText
            android:id="@+id/profilePassword"
            android:layout_width="165dp"
            android:layout_height="35dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/profile_card"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/profilePhone"
            app:layout_constraintVertical_bias="0.174" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="115dp"
            android:layout_height="35dp"
            android:text="@string/enter_repassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:layout_constraintVertical_bias="0.191" />

        <EditText
            android:id="@+id/reProfilePassword"
            android:layout_width="165dp"
            android:layout_height="35dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/profile_card"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/profilePassword"
            app:layout_constraintVertical_bias="0.174" />

        <Button
            android:id="@+id/confirmEditBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_button"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePassword"
            app:layout_constraintVertical_bias="0.752" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="109dp"
        android:layout_height="126dp"
        android:elevation="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>